css/wishlist.css
.wishlist_main_container{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  margin:4rem 0rem;
}

.wishlist_container{
  text-align: center;
}

.wishlist_btn{
  margin-right: 0rem;
  padding: 0.5rem;
  width: 70%;
  border-radius: 0.3rem;

}
.item:hover{
  transform: none;
}

.item{
  position: relative;
  max-width: 30rem;
}

.like_icon{
  position: absolute;
  top: 3%;
  background-color: lightgrey;
  right: 17%;
  border-radius: 50%;
  color: var(--primary-color);
  cursor: pointer;
}

.item .like_solid{
  font-size: 1rem;
  margin: 0;
  padding: 0.5rem;

}

.product_item .item_desc{
  margin-left: 0;
}

.product_item .item_desc_heading{
  width: 70%;
}

.product_container{
  margin: 3rem 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  row-gap: 4rem;
}

@media only screen and (max-width: 600px) {
  .wishlist_main_container{
    grid-template-columns: 1fr 1fr;
  }

  .product_item .item_desc{
    margin-left: 2rem;
    width: 5rem;
  }
    /* .wishlist_container .item_desc{
    margin-left: 6.4rem;
  } */
}

